# nemo-torchtitan-sft-bench

./: README.md  pyproject.toml  run_hf_benchmark.sh  run_single_benchmark.sh  setup.sh  setup_torch_nightly.sh
logs/: hf_lora_Qwen3-14B_seq2048_20251026_133835.jsonl  hf_lora_Qwen3-14B_seq2048_20251026_133835_summary.json  hf_lora_Qwen3-4B_seq2048_20251026_112331.jsonl  hf_lora_Qwen3-4B_seq2048_20251026_112331_summary.json  hf_lora_Qwen3-4B_seq512_20251026_160735.jsonl  hf_lora_Qwen3-8B_seq2048_20251026_120440.jsonl  hf_lora_Qwen3-8B_seq2048_20251026_120440_summary.json
src/: __init__.py
src/benchmarks/: __init__.py  hf_peft_benchmark.py
src/data/: tulu_loader.py
src/utils/: __init__.py  metrics.py
